Define font size for list item

--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,7 @@ li {
   text-align: -webkit-match-parent;
   border-radius: .15em;
   font-family: sans-serif;
+  font-size: .889em;
   color: #333;
   border: 1px solid #ebeaec;
   word-wrap: break-word;
