--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,8 @@
 body {
   background-color: #f1ede1;
+  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .flex {
@@ -71,24 +74,24 @@ ul {
 }
 
 li {
-  display: block;
-  overflow: scroll;
   margin: .5em;
   position: relative;
   padding: 1em;
   box-shadow: 0 3px 0 #14bbb1;
   list-style-type: none;
   width: 50%;
-  height: 1.5em;
-  line-height: 130%;
+  height: 3em;
   background-color: #fff;
   display: list-item;
   text-align: -webkit-match-parent;
   border-radius: .15em;
   font-family: sans-serif;
+  font-size: .889em;
   color: #333;
   border: 1px solid #ebeaec;
-  word-wrap: break-word;
+  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 li:hover {
