Add .flex fallbacks

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,10 @@ body {
 }
 
 .flex {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
   flex-flow: column wrap;
   align-content: center;
