Clean up style, center list, delete button

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,21 +25,21 @@ label input {
   font-size: 1.25em; }
 
 .submit {
-  margin: 1.5em 0;
-  -webkit-border-radius: 0.75em;
-  -moz-border-radius: 0.75em;
+  box-sizing: border-box;
+  margin: 1em;
   border-radius: 0.75em;
   width: 13em;
-  height: 3em;
-  box-shadow: 0em;
-  color: white;
   background-color: #14bbb1;
-  border: 0;
+  line-height: 3em;
   font-size: 1em;
-  text-transform: Uppercase;
+  text-align: center;
+  text-transform: uppercase;
+  color: #fff;
+  border: 0 !important;
   outline: none; }
   .submit:hover {
-    background-color: #1b8e87; }
+    background-color: #0f8d85;
+    cursor: pointer; }
 
 .flex {
   display: -webkit-box;
@@ -93,7 +93,6 @@ label input {
 
 ul {
   border-top: 1px solid #dedede;
-  width: 70%;
   padding: 2em; }
 
 li {
@@ -102,7 +101,7 @@ li {
   padding: 1em;
   box-shadow: 0 3px 0 #14bbb1;
   list-style-type: none;
-  width: 50%;
+  width: 90%;
   height: 1.5em;
   background-color: #fff;
   display: list-item;
@@ -117,3 +116,6 @@ li {
     box-shadow: 0 3px 0 #ffdc00; }
   li:active {
     box-shadow: 0 3px 0 #d86969; }
+  @media screen and (min-width: 50em) {
+    li {
+      width: 40%; } }
