--- a/sass/modules/_module-list.sass
+++ b/sass/modules/_module-list.sass
@@ -21,7 +21,6 @@
 
 ul
   border-top: 1px solid #dedede
-  width: 70%
   padding: 2em
 
 li
@@ -30,7 +29,7 @@ li
   padding: 1em
   box-shadow: 0 3px 0 #14bbb1
   list-style-type: none
-  width: 50%
+  width: 90%
   height: 1.5em
   background-color: #fff
   display: list-item
@@ -45,3 +44,6 @@ li
     box-shadow: 0 3px 0 #ffdc00
   &:active
     box-shadow: 0 3px 0 #d86969
+  @media screen and (min-width: 50em)
+    width: 40%
+
