--- a/sass/sassy2.sass
+++ b/sass/sassy2.sass
@@ -136,3 +136,41 @@ li.new
     color: #fff
   &:focus
     outline: 0
+
+@media (max-width: 640px)
+  li.new
+    margin: .5em
+    position: relative
+    padding: 1em
+    box-shadow: 0 3px 0 #b094e2
+    list-style-type: none
+    width: 80%
+    height: 1.5em
+    background-color: #fff
+    display: list-item
+    text-align: -webkit-match-parent
+    border-radius: .15em
+    font-family: sans-serif
+    font-size: .889em
+    color: #333
+    border: 1px solid #ebeaec
+    overflow: hidden
+    &:hover
+      box-shadow: 0 3px 0 #f6925a
+    &:active
+      box-shadow: 0 3px 0 #d86969
+  label
+    input
+      width: 11em
+      height: 2em
+      font-size: 1.25em
+  h1
+    width: 11em
+    line-height: 2.25em
+    background-color: #7bccf9
+    text-align: center
+    text-transform: uppercase
+    font-family: sans-serif
+    vertical-align: middle
+    color: #fff
+    border-radius: .25em
