--- a/sass/sassy.sass
+++ b/sass/sassy.sass
@@ -41,7 +41,7 @@ body
       content: ' ✓'
   .done
     color: #999
-    text-decoration:line-through
+    text-decoration: line-through
 
 #item
   border: 0
@@ -119,3 +119,41 @@ li
   outline: none
   &:hover
     background-color: #1b8e87
+
+@media (max-width: 640px)
+  li
+    margin: .5em
+    position: relative
+    padding: 1em
+    box-shadow: 0 3px 0 #14bbb1
+    list-style-type: none
+    width: 80%
+    height: 1.5em
+    background-color: #fff
+    display: list-item
+    text-align: -webkit-match-parent
+    border-radius: .15em
+    font-family: sans-serif
+    font-size: .889em
+    color: #333
+    border: 1px solid #ebeaec
+    overflow: hidden
+    &:hover
+      box-shadow: 0 3px 0 #ffdc00
+    &:active
+      box-shadow: 0 3px 0 #d86969
+  label
+    input
+      width: 11em
+      height: 2em
+      font-size: 1.25em
+  h1
+    width: 11em
+    line-height: 2.25em
+    background-color: #7bccf9
+    text-align: center
+    text-transform: uppercase
+    font-family: sans-serif
+    vertical-align: middle
+    color: #fff
+    border-radius: .25em
