--- a/sass/sassy.css
+++ b/sass/sassy.css
@@ -142,12 +142,12 @@ li {
       box-shadow: 0 3px 0 #d86969; }
 
   label input {
-    width: 11em;
+    width: 85%;
     height: 2em;
     font-size: 1.25em; }
 
   h1 {
-    width: 11em;
+    width: 85%;
     line-height: 2.25em;
     background-color: #7bccf9;
     text-align: center;
