--- a/sass/sassy2.sass
+++ b/sass/sassy2.sass
@@ -40,6 +40,22 @@ li.new
   &:hover
     background-color: #1b8e87
 
+#toggler
+  border: 0em
+  font-size: .558em
+  background: transparent
+  text-transform: uppercase
+  -webkit-border-radius: .75em
+  -moz-border-radius: .75em
+  border-radius: .75em
+  border: 1px solid #8ca2ad
+  color: #8ca2ad
+  padding: .5em
+  &:hover
+    background-color: #8ca2ad
+    color: #fff
+  &:focus
+    outline: 0
 
 @media (max-width: 640px)
   li.new
